--- a/report/04-Wrapup.Rmd
+++ b/report/04-Wrapup.Rmd
@@ -5,7 +5,7 @@ output: html_notebook
 
 ## Wrapup
 
-We used four different models to perform binary classification on whether to drink alcohol. We used python to implement knn and linear regression, and used r to implement decision trees and xgboost.
+We used four different models to perform binary classification on whether to drink alcohol. We used python to implement KNN and linear regression, and used R to implement decision trees and xgboost.
 We then used a confusion matrix to evaluate their recall rate.
 
 ## Conclusions
